[package]
name = "tfhe_sql_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "*", features = ["boolean", "shortint", "integer", "x86_64-unix"] }
sqlparser=  { version = "*" }
serde =  { version = "*" }
csv =  { version = "*" }
