[package]
name = "tfhe_sql_query"
version = "0.1.0"
edition = "2021"

[dependencies]
# tfhe and some of its dependencies
aligned-vec = { version = "0.5" }
concrete-csprng = { version = "0.4.0" }
concrete-fft = { version = "0.4.0" }
dyn-stack = { version = "0.9" }
rayon = { version = "1.5.0" }
tfhe = { version = "*", features = ["boolean", "integer", "shortint", "x86_64-unix"] }
# csv reader, sqlparser, e-graphs good
csv =  { version = "*" }
egg = { version = "0.9.5" }
serde =  { version = "*" }
sqlparser=  { version = "*" }

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
