[package]
name = "tfhe_sql_query"
version = "0.1.0"
edition = "2021"

[dependencies]
# tfhe and some of its dependencies
aligned-vec = { version = "0.5" }
concrete-fft = { version = "0.4.0" }
dyn-stack = { version = "0.9" }
rayon = { version = "1.5.0" }
tfhe = { version = "*", features = ["boolean", "integer", "shortint", "x86_64-unix"] }
# other deps
csv =  { version = "*" }
egg = { version = "0.9.5" }
sqlparser=  { version = "*" }
clap = { version = "4.5.4", features = ["derive"] }

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex.html" ]
